--- a/ARMdps/Views/Region/_RegionForm.cshtml
+++ b/ARMdps/Views/Region/_RegionForm.cshtml
@@ -1,30 +1,33 @@
-﻿@{
-
-}
-<head>
+﻿<head>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-grid.min.css"/> 
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-grid.min.css"/>
     <link rel="stylesheet" href="~/DataTables/datatables.min.css" />
+    <link rel="stylecheet" href="~/DataTables/DataTables-1.12.1/css/jquery.dataTables.min.css"/>
+    <link rel="stylesheet" href="~/Select-1.4.0/css/select.dataTables.min.css"/>
+    <link rel="stylesheet" href="~/Buttons-2.2.3/css/buttons.dataTables.min.css"/>
+    <link rel="stylesheet" href="~/DateTime-1.1.2/css/dataTables.dateTime.min.css"/>
+    <link rel="stylesheet" href="~/css/Modal.css"/>
     <link rel="stylesheet" href="~/css/toastr.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
 </head>
-<div class="region_div">
+<div class="editform_div">
     <form id="regForm">
-        <div class="region_head">
+        <div class="editform_head">
             <p style="margin: 0px 0px 0px 0px">
                 Данные о регионе
             </p>
         </div>
-        <table id="regTable" class="region_table display">
+        <table id="regTable" class="editform_table">
             <thead>
                 <tr>
-                    <th colspan="2" class="region_h" style="border-bottom: 1px solid #75BCFF;">
+                    <th class="editform_h">
                         <input type="hidden" id="Region_Id" name="Region_Id" />
                         Заполните параметры региона
                         <span style="color:#FF3E3E; font-size:10px;">*</span>
                         <span style="color:#A3B1C6; font-size:12px;"> - Обязательное для заполнения поле</span>
                     </th>
+                    <th class="editform_h"></th>
                 </tr>
             </thead>
             <tbody>
@@ -70,9 +73,10 @@
                     </td>
                 </tr>
                 <tr>
-                    <td colspan="2" class="region_h">
-                        Заполните параметры выгрузки материалов в ФИС-М
-                    </td>
+                    <th class="editform_h">
+                    <span style="color:#A3B1C6; font-size:12px;"> - Заполните параметры выгрузки материалов в ФИС-М</span>                        
+                    </th>
+                    <th class="editform_h"></th>
                 </tr>
                 <tr>
                     <td>
@@ -148,6 +152,10 @@
 <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/DataTables/datatables.min.js"></script>
+<script src="~/DataTables/DataTables-1.12.1/js/jquery.dataTables.min.js"></script>
+<script src="~/Select-1.4.0/js/dataTables.select.min.js"></script>
+<script src="~/Buttons-2.2.3/js/dataTables.buttons.min.js"></script>
+<script src="~/js/Modal.js"></script>
 <script src="~/js/toastr.min.js"></script>
 <script src="~/js/jquery.maskedinput.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
@@ -158,7 +166,14 @@
 
     $(document).ready(function () {
 
-        $("#regTable").DataTable();
+        $("#regTable").DataTable({
+            dom:'',
+            scrollY:'600px',
+            scrollCollapse:true,
+            paging:false,
+            searching:false,
+            ordering:false
+        });
     });
 
     //var dtoptions={
@@ -480,6 +495,7 @@
 
         ev.preventDefault();
         resetValidError();
+        
         //собираем данные с формы
         let jsonData = {
             Region_Id: $('#Region_Id').val(),
@@ -497,7 +513,7 @@
             FTPLogin: $('#FTPLogin').val(),
             FTPPassword: $('#FTPPassword').val()
         };
-
+        console.log(jsonData);
         //проверяем валидацию
         let valResult = validateRegionForm(jsonData);
 
