--- a/ARMdps/wwwroot/css/site.css
+++ b/ARMdps/wwwroot/css/site.css
@@ -155,9 +155,9 @@ button:active {
     border-radius: 6px;
 }
 
-/**/
+/*Хедер формы редактирования*/
 
-.region_head {
+.editform_head {
     background-color: #75BCFF;
     border-radius: 6px 6px 0px 0px;
     color: #FFFFFF;
@@ -169,9 +169,9 @@ button:active {
     padding: 10px 10px 3px 10px;
 }
 
-/**/
+/*Обертка формы редактирования*/
 
-.region_div {
+.editform_div {
     background: #FFFFFF;
     box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.25);
     border-radius: 6px;
@@ -180,7 +180,7 @@ button:active {
 
 /**/
 
-table .region_table {
+table .editform_table {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
@@ -223,16 +223,17 @@ table.dataTable tbody td .region_td_in {
 }*/
 
 
-/**/
+/*Заголовок на форме редактирования*/
 
-.region_h {
-    border-bottom: 1px solid #75BCFF;
+.editform_h {
+    border-bottom: 1px solid #75BCFF !important;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 15px;
     line-height: 17px;
     color: #75BCFF;
+    text-align: left !important;
 }
 
 /**/
@@ -299,16 +300,7 @@ i .error_icon_Fail {
     margin: -40px;
 }
 
-/*.input_span {
-    background-color: #FFFFFF;
-    border-radius: 0px 6px 6px 0px;
-    border-left: none;
-    border-color: black;
-    box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.25);
-    padding: 1px 0px 3px 1px;
-    margin-left: -23px;
-    width: 15px;
-}*/
+
 
 .reg_label {
     width: 600px;
@@ -323,14 +315,6 @@ i .error_icon_Fail {
 }
 
 /**/
-
-/*.validSpanFail {*/
-/*position: absolute;*/
-/*border: 1px solid red;
-    border-left: none;
-    color: #FF3E3E;
-    width: 15px;
-}*/
 
 
 
@@ -353,6 +337,7 @@ i .error_icon_Fail {
 table.dataTable td.dataTables_empty {
     vertical-align: central;
     height: 500px !important;
+    font-size:22px !important;
 }
 
 
@@ -414,6 +399,8 @@ i .table_search {
     background-color: #C4C4C4 !important;
 }
 
+/*Поле поиска*/
+
 .dataTables_wrapper .dataTables_filter input {
     border-color: #75BCFF !important;
     border-radius:6px !important;
@@ -421,15 +408,51 @@ i .table_search {
     color: #0465D0 !important;
 }
 
-th .del_icon{
+.dataTables_wrapper .dataTables_filter input :active {
+    border-color: #75BCFF !important;
+    border-radius: 6px !important;
+    border: 1px solid !important;
+    color: #0465D0 !important;
+}
+
+/*пагинация посеридине*/
+
+.dataTables_wrapper .dataTables_paginate{
     text-align:center !important;
-    justify-content:center !important;    
+    float:inherit !important;
+}
+
+th .del_icon {
+    text-align: center !important;
+    justify-content: center !important;
 }
 
 table.dataTable thead th{
     text-align:center;
 }
 
-.paginate_button {
+.dataTables_paginate .paginate_button {
+    padding: 0px !important;
     color: #044C6A !important;
+}
+
+/*выбрать чекбокс*/
+
+table.dataTable tr.selected td.select-checkbox::after {
+    text-shadow: #FFFFFF !important;
+}
+
+.department_table{
+    display:none;
+}
+
+.department_form{
+    display:none;
+}
+
+.show_table {
+    display: block;
+}
+.hide_table{
+    display:none;
 }
